--- a/options.html
+++ b/options.html
@@ -5,10 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-   <h1>Not implemeted yet</h1>
-       
+<body class="p-4">
+   <h1>Mintab Settings</h1>
+   <div class="row">
+    <div class="col">
+        <div class="card bg-dark">
+            <div class="card-title p-3 display-6">Layout Settings</div>
+            <div class="card-body">
+                <input type="radio" name="layout" value="1"></input>
+                <input type="radio" name="layout" value="2"></input>
+                <input type="radio" name="layout" value="3"></input>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card bg-dark">
+            <div class="card-title p-3 display-6">Theme Settings</div>
+            <div class="card-body">
+                <input type="radio" name="theme" value="1"></input>
+                <input type="radio" name="theme" value="2"></input>
+                <input type="radio" name="theme" value="3"></input>
+            </div>
+        </div>
+    </div>
+   </div>    
 </body>
 </html>
